Make gRPC server more interesting (and error prone)
